--- a/composer.json
+++ b/composer.json
@@ -2,13 +2,13 @@
     "name": "heroku/heroku-buildpack-php",
     "description": "Toolkit for starting a PHP application locally, with or without foreman, using the same config for PHP/HHVM and Apache2/Nginx as on Heroku",
     "keywords": ["heroku", "foreman", "php", "hhvm", "apache", "apache2", "nginx"],
-    "homepage": "https://github.com/heroku/heroku-buildpack-php",
+    "homepage": "https://github.com/CsrIndia/MessengerBot",
     "type": "library",
     "license": "MIT",
     "authors": [
         {
-            "name": "David Zuelke",
-            "email": "dz@heroku.com"
+            "name": "Vikram Sheoran",
+            "email": "vikram@csrindia.org"
         }
     ],
     "bin": [
