--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "name": "MessengerBot",
-  "description": "test",
+  "description": "This is a Messenger Bot",
   "scripts": {
   },
   "env": {
